--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -309,7 +309,7 @@
                                                                 <constraint firstAttribute="height" constant="130" id="Hyy-hq-vA8"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U8T-uW-Usv">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U8T-uW-Usv">
                                                             <rect key="frame" x="0.0" y="135" width="214" height="20"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="20" id="S7b-Bh-3X9"/>
@@ -395,19 +395,44 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Vd-4X-EhU">
+                                <rect key="frame" x="10" y="423" width="394" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="sle-cI-XKr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Gqf-hE-fIq">
+                                <rect key="frame" x="182" y="423" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="CU5-tn-5x1"/>
+                                    <constraint firstAttribute="height" constant="50" id="VN4-3r-6za"/>
+                                </constraints>
+                                <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="ZCj-kS-Tj0" firstAttribute="top" secondItem="oKV-m5-Al9" secondAttribute="top" constant="10" id="5mw-cZ-Ikz"/>
                             <constraint firstItem="ZCj-kS-Tj0" firstAttribute="trailing" secondItem="oKV-m5-Al9" secondAttribute="trailing" constant="-10" id="Fh3-cV-tJI"/>
+                            <constraint firstItem="3Vd-4X-EhU" firstAttribute="centerY" secondItem="gFT-7K-K98" secondAttribute="centerY" id="Ms4-lZ-x8a"/>
+                            <constraint firstItem="Gqf-hE-fIq" firstAttribute="centerX" secondItem="gFT-7K-K98" secondAttribute="centerX" id="Ocr-6W-0g2"/>
+                            <constraint firstItem="oKV-m5-Al9" firstAttribute="trailing" secondItem="3Vd-4X-EhU" secondAttribute="trailing" constant="10" id="cra-fF-lE9"/>
                             <constraint firstItem="oKV-m5-Al9" firstAttribute="bottom" secondItem="ZCj-kS-Tj0" secondAttribute="bottom" constant="10" id="ozM-Qo-F1a"/>
+                            <constraint firstItem="Gqf-hE-fIq" firstAttribute="centerY" secondItem="gFT-7K-K98" secondAttribute="centerY" id="pMk-sf-Mdt"/>
+                            <constraint firstItem="3Vd-4X-EhU" firstAttribute="leading" secondItem="oKV-m5-Al9" secondAttribute="leading" constant="10" id="uBT-lW-lce"/>
+                            <constraint firstItem="3Vd-4X-EhU" firstAttribute="centerX" secondItem="gFT-7K-K98" secondAttribute="centerX" id="vMk-Mv-Krk"/>
                             <constraint firstItem="ZCj-kS-Tj0" firstAttribute="leading" secondItem="oKV-m5-Al9" secondAttribute="leading" constant="10" id="zzf-WN-Oov"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="oKV-m5-Al9"/>
                     </view>
                     <navigationItem key="navigationItem" id="V3d-CZ-Zsq"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="Gqf-hE-fIq" id="Xm2-ls-aqp"/>
                         <outlet property="itemCollection" destination="ZCj-kS-Tj0" id="nrH-uS-sUk"/>
+                        <outlet property="resultSearchNotification" destination="3Vd-4X-EhU" id="noy-WT-eZ9"/>
                         <segue destination="6Wj-Z5-hwc" kind="push" identifier="ViewDetalFoodID" id="er7-x8-644"/>
                     </connections>
                 </viewController>
