--- a/notritionVendorsAPP/View/Base.lproj/Main.storyboard
+++ b/notritionVendorsAPP/View/Base.lproj/Main.storyboard
@@ -313,10 +313,10 @@
             </objects>
             <point key="canvasLocation" x="301" y="2421"/>
         </scene>
-        <!--View Controller-->
+        <!--Category Controller-->
         <scene sceneID="8I9-Vg-tx7">
             <objects>
-                <viewController id="QtR-ru-mlt" sceneMemberID="viewController">
+                <viewController id="QtR-ru-mlt" customClass="CategoryController" customModule="notritionVendorsAPP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Uf4-1j-izM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -325,13 +325,86 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="116" id="opd-KH-3QZ">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="116"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" rowHeight="107" id="opd-KH-3QZ" customClass="CategoryCell" customModule="notritionVendorsAPP" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="107"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="opd-KH-3QZ" id="k1o-LY-xRq">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="115.66666666666667"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="106.66666666666667"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="ozO-ix-3xs">
+                                                    <rect key="frame" x="10" y="10" width="404" height="96.666666666666671"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2sP-Z0-e7a" customClass="CustomImageView" customModule="notritionVendorsAPP" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="0.0" width="80" height="96.666666666666671"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="80" id="ZHm-nf-2DK"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="X3N-5c-gkW">
+                                                            <rect key="frame" x="95" y="0.0" width="309" height="96.666666666666671"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ih4-CR-2ca">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="309" height="20.333333333333332"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3cS-Jh-Ixn">
+                                                                    <rect key="frame" x="0.0" y="20.333333333333332" width="309" height="15.666666666666668"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yww-Xz-3yk">
+                                                                    <rect key="frame" x="0.0" y="36" width="309" height="17"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                    <color key="textColor" red="0.1062027202" green="0.64605805839999997" blue="0.011073882889999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LTh-pD-NUw" customClass="CosmosView" customModule="Cosmos">
+                                                                    <rect key="frame" x="0.0" y="53" width="309" height="43.666666666666657"/>
+                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    <userDefinedRuntimeAttributes>
+                                                                        <userDefinedRuntimeAttribute type="color" keyPath="filledColor">
+                                                                            <color key="value" red="1" green="0.66666666669999997" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                        </userDefinedRuntimeAttribute>
+                                                                        <userDefinedRuntimeAttribute type="color" keyPath="filledBorderColor">
+                                                                            <color key="value" red="1" green="0.66666666669999997" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                        </userDefinedRuntimeAttribute>
+                                                                        <userDefinedRuntimeAttribute type="color" keyPath="textColor">
+                                                                            <color key="value" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        </userDefinedRuntimeAttribute>
+                                                                    </userDefinedRuntimeAttributes>
+                                                                </view>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="LTh-pD-NUw" firstAttribute="width" secondItem="X3N-5c-gkW" secondAttribute="width" id="Rq8-Ae-CV7"/>
+                                                                <constraint firstItem="yww-Xz-3yk" firstAttribute="width" secondItem="X3N-5c-gkW" secondAttribute="width" id="ju8-DT-cmr"/>
+                                                                <constraint firstItem="3cS-Jh-Ixn" firstAttribute="width" secondItem="X3N-5c-gkW" secondAttribute="width" id="lt5-h9-aDG"/>
+                                                                <constraint firstItem="Ih4-CR-2ca" firstAttribute="width" secondItem="X3N-5c-gkW" secondAttribute="width" id="nWD-oU-mzh"/>
+                                                            </constraints>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="X3N-5c-gkW" firstAttribute="height" secondItem="ozO-ix-3xs" secondAttribute="height" id="d8Q-2h-Kgo"/>
+                                                    </constraints>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="ozO-ix-3xs" firstAttribute="leading" secondItem="k1o-LY-xRq" secondAttribute="leading" constant="10" id="0RA-CM-1vG"/>
+                                                <constraint firstItem="ozO-ix-3xs" firstAttribute="top" secondItem="k1o-LY-xRq" secondAttribute="top" constant="10" id="BeL-kU-wUr"/>
+                                                <constraint firstAttribute="bottom" secondItem="ozO-ix-3xs" secondAttribute="bottom" id="Mhz-1k-dte"/>
+                                                <constraint firstAttribute="trailing" secondItem="ozO-ix-3xs" secondAttribute="trailing" id="VN7-pU-RGu"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="address" destination="3cS-Jh-Ixn" id="nVc-qL-f8q"/>
+                                            <outlet property="distance" destination="yww-Xz-3yk" id="ku7-sl-8R8"/>
+                                            <outlet property="itemImage" destination="2sP-Z0-e7a" id="VoS-oQ-QFs"/>
+                                            <outlet property="name" destination="Ih4-CR-2ca" id="ADj-XI-vVx"/>
+                                            <outlet property="rating" destination="LTh-pD-NUw" id="okg-U0-tbL"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -347,12 +420,13 @@
                         <viewLayoutGuide key="safeArea" id="xhR-tM-TeL"/>
                     </view>
                     <connections>
+                        <outlet property="tableView" destination="OPZ-SF-MUz" id="bon-Yf-R6q"/>
                         <segue destination="8Rb-Zj-4kI" kind="show" identifier="CategoryToDetail" id="bMp-ZF-8UM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tu7-rG-yp7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="629" y="690"/>
+            <point key="canvasLocation" x="627.536231884058" y="688.39285714285711"/>
         </scene>
         <!--Hight Rating Controller-->
         <scene sceneID="4hk-pc-KD4">
@@ -830,7 +904,7 @@
         <image name="searchbar" width="400" height="38"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="WYP-LC-rZ2"/>
+        <segue reference="9zj-Eq-LIz"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
